--- a/index.html
+++ b/index.html
@@ -23,20 +23,24 @@
       </div>
       <div class="icons">
         <div>
-          <img src="/imgs/icones/localizacao.svg" alt="" />
-          <p>onde estamos</p>
+          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"
+            ><img src="/imgs/icones/localizacao.svg" alt=""
+          /></a>
+          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"
+            ><p>onde estamos</p></a
+          >
         </div>
         <div>
-          <img src="/imgs/icones/email.svg" alt="" />
-          <p>picolequebrado@gmail.com</p>
+          <a href="mailto:picolequebradoskateboard@gmail.com"><img src="/imgs/icones/email.svg" alt="" /></a>
+          <a href="mailto:picolequebradoskateboard@gmail.com"><p>picolequebradoskateboard@gmail.com</p></a>
         </div>
         <div>
-          <img src="/imgs/icones/whatsapp.svg" alt="" />
-          <p>(91) 98206-6009</p>
+          <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
+          <a href="tel:+5591982066009"><p>(91) 98206-6009</p></a>
         </div>
         <div>
-          <img src="/imgs/icones/telefone.svg" alt="" />
-          <p>(94) 99174-6944</p>
+          <a href="tel:+5594991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
+          <a href="tel:+5594991746944"><p>(94) 99174-6944</p></a>
         </div>
       </div>
     </div>
@@ -261,21 +265,21 @@
         <div>
           <h3>INSTITUCIONAL</h3>
           <ul>
-            <li>Sobre a Empresa</li>
+            <li><a href="/paginas/sobre.html">Sobre a Empresa</a></li>
             <li>Termos & Condições</li>
           </ul>
         </div>
         <div>
           <h3>DÚVIDAS?</h3>
           <ul>
-            <li>Fale Conosco</li>
+            <li><a href="/paginas/contato.html">Fale Conosco</a></li>
             <li>Política de Privacidade</li>
-            <li>Trocas e Devoluções</li>
+            <li><a href="/paginas/contato.html">Trocas e Devoluções</a></li>
           </ul>
           <div>
             <h3>ATENDIMENTO</h3>
             <ul>
-              <li>Central de Atendimento</li>
+              <li><a href="/paginas/contato.html">Central de Atendimento</a></li>
             </ul>
           </div>
         </div>
