--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -32,20 +32,28 @@
       </div>
       <div class="icons">
         <div>
-          <img src="/imgs/icones/localizacao.svg" alt="" />
-          <p>onde estamos</p>
+          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"
+            ><img src="/imgs/icones/localizacao.svg" alt=""
+          /></a>
+          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"
+            ><p>onde estamos</p></a
+          >
         </div>
         <div>
-          <img src="/imgs/icones/email.svg" alt="" />
-          <p>picolequebrado@gmail.com</p>
+          <a href="mailto:picolequebradoskateboard@gmail.com"
+            ><img src="/imgs/icones/email.svg" alt=""
+          /></a>
+          <a href="mailto:picolequebradoskateboard@gmail.com"
+            ><p>picolequebradoskateboard@gmail.com</p></a
+          >
         </div>
         <div>
-          <img src="/imgs/icones/whatsapp.svg" alt="" />
-          <p>(91) 98206-6009</p>
+          <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
+          <a href="tel:+5591982066009"><p>(91) 98206-6009</p></a>
         </div>
         <div>
-          <img src="/imgs/icones/telefone.svg" alt="" />
-          <p>(94) 99174-6944</p>
+          <a href="tel:+5594991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
+          <a href="tel:+5594991746944"><p>(94) 99174-6944</p></a>
         </div>
       </div>
     </div>
@@ -63,27 +71,79 @@
         </ul>
       </nav>
     </header>
+    <section class="container-contato">
+      <h2>TEM ALGUMA DÚVIDA? MANDA UM E-MAIL PARA NÓS!</h2>
+      <div class="container-endereco">
+        <ul class="endereco">
+          <li>avenida fernandoguilhon, 173</li>
+          <li>Mercado Municipal de Marituba</li>
+          <li>MARITUBA - PA</li>
+          <li>CEP: 67200-000</li>
+          <li>TEL: (91) 98206-6009</li>
+        </ul>
+        <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"
+          ><img src="/imgs/mapas/mapa.png" alt=""
+        /></a>
+      </div>
+      <h3>Mande sua mensagem</h3>
+    </section>
+
+    <section>
+      <form
+        class="form-Cliente"
+        action="https://formsubmit.co/danielzamperlini.developer@gmail.com"
+        method="POST"
+      >
+        <input
+          type="hidden"
+          name="_next"
+          value="https://danielzamperlini.github.io/sucesso.html"
+        />
+        <input
+          type="hidden"
+          name="_autoresponse"
+          value="Recebemos sua mensagem, obrigado pelo contato e logo responderemos!"
+        />
+        <label class="row-1" for="name">Nome</label>
+        <input class="email-input row-2" type="text" name="name" required />
+        <label class="row-1" for="email">Email</label>
+        <input class="row-2" type="email" name="email" required />
+        <label class="row-3" for="name">Telefone</label>
+        <input class="email-input row-4" type="number" name="number" required />
+        <label class="row-3" for="name">Assunto</label>
+        <input class="email-input row-4" type="text" name="name" required />
+        <label class="row-5" for="message">Mensagem</label>
+        <textarea
+          class="row-6"
+          name="message"
+          placeholder="Escreva aqui sobre o motivo do seu contato"
+          required
+        ></textarea>
+        <button class="botao row-7" type="submit">Enviar</button>
+      </form>
+    </section>
+
     <footer>
       <div class="footer">
         <div class="dados-enderecos">
           <div>
             <h3>INSTITUCIONAL</h3>
             <ul>
-              <li>Sobre a Empresa</li>
+              <li><a href="/paginas/sobre.html">Sobre a Empresa</a></li>
               <li>Termos & Condições</li>
             </ul>
           </div>
           <div>
             <h3>DÚVIDAS?</h3>
             <ul>
-              <li>Fale Conosco</li>
+              <li><a href="/paginas/contato.html">Fale Conosco</a></li>
               <li>Política de Privacidade</li>
-              <li>Trocas e Devoluções</li>
+              <li><a href="/paginas/contato.html">Trocas e Devoluções</a></li>
             </ul>
             <div>
               <h3>ATENDIMENTO</h3>
               <ul>
-                <li>Central de Atendimento</li>
+                <li><a href="/paginas/contato.html">Central de Atendimento</a></li>
               </ul>
             </div>
           </div>
@@ -102,31 +162,21 @@
           <ul class="midias-footer">
             <li>siga-nos</li>
             <li>
-              <a href="https://www.instagram.com/picolequebrado/"
-                ><img src="/imgs/icones/instagram.svg" alt="" srcset=""
-              /></a>
+              <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
             </li>
             <li>
-              <a href="https://www.facebook.com/profile.php?id=100073004153898"
-                ><img src="/imgs/icones/facebook.svg" alt="" srcset=""
-              /></a>
+              <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
             </li>
             <li>
-              <a href="tel:+5591982066009"
-                ><img src="/imgs/icones/whatsapp.svg" alt="" srcset=""
-              /></a>
+              <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
             </li>
             <li>
-              <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"
-                ><img src="/imgs/icones/youtube.svg" alt="" srcset=""
-              /></a>
+              <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
             </li>
           </ul>
         </div>
       </div>
-      <p class="direitos">
-        © TODOS OS DIREITOS RESERVADOS A PICOLE QUEBRADO SKATEBOARD
-      </p>
+      <p class="direitos">© TODOS OS DIREITOS RESERVADOS A PICOLE QUEBRADO SKATEBOARD</p>
     </footer>
   </body>
 </html>
