--- a/index.html
+++ b/index.html
@@ -23,24 +23,28 @@
       </div>
       <div class="icons">
         <div>
-          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"
-            ><img src="/imgs/icones/localizacao.svg" alt=""
-          /></a>
-          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"
-            ><p>onde estamos</p></a
-          >
+          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="/imgs/icones/localizacao.svg" alt="" /></a>
+          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7">
+            <p>onde estamos</p>
+          </a>
         </div>
         <div>
           <a href="mailto:picolequebradoskateboard@gmail.com"><img src="/imgs/icones/email.svg" alt="" /></a>
-          <a href="mailto:picolequebradoskateboard@gmail.com"><p>picolequebradoskateboard@gmail.com</p></a>
+          <a href="mailto:picolequebradoskateboard@gmail.com">
+            <p>picolequebradoskateboard@gmail.com</p>
+          </a>
         </div>
         <div>
           <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
-          <a href="tel:+5591982066009"><p>(91) 98206-6009</p></a>
+          <a href="tel:+5591982066009">
+            <p>(91) 98206-6009</p>
+          </a>
         </div>
         <div>
           <a href="tel:+5594991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
-          <a href="tel:+5594991746944"><p>(94) 99174-6944</p></a>
+          <a href="tel:+5594991746944">
+            <p>(94) 99174-6944</p>
+          </a>
         </div>
       </div>
     </div>
