--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Picole quebrado | home</title>
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=Lacquer&display=swap" rel="stylesheet" />
@@ -78,7 +78,7 @@
       <li><img src="/imgs/fotos//alexander-londono-ApPIboUsOOY-unsplash.jpg" alt="" /></li>
     </ul>
   </div>
-    
+
   <section class="lancamentos">
     <h1>NOVOS SHAPES LANÇADOS</h1>
     <div>
@@ -339,8 +339,8 @@
     </div>
     <p class="direitos">© TODOS OS DIREITOS RESERVADOS A PICOLE QUEBRADO SKATEBOARD</p>
   </footer>
-  
-	<script src="/javascript/simple-slide.js"></script>
+
+  <script src="/javascript/simple-slide.js"></script>
   <script src="/javascript/script.js"></script>
 </body>
 
